Part One HTML Commit
Updated HTML content.

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 <img src="img/title2.png" alt="title" id="title">
 
-<p>Utopic Gallery is a Los Angeles-based art gallery featuring the works of up-and-coming artists whose work is curated on a seasonal, residency-based basis. We are a tiny, carbon-conscious gallery focused on advocating ecological-conscious works of art. </p>
+<p>Utopic Gallery is a Los Angeles-based art gallery featuring the works of up-and-coming artists from near and far whose work is curated on a seasonal, residency-based basis. We are a tiny, carbon-conscious gallery focused on advocating ecological-centric works of art. </p>
 
 <img src="img/nail.jpg" alt="nail" id="nail">
 
