CSS, Before Toast
All CSS has been added, but Toast code for sass hasn’t been worked out
yet. On its way soon!

--- a/about/index.html
+++ b/about/index.html
@@ -42,12 +42,13 @@
 </ul>
 </nav>
 
+<img src="../img/title_about.png" alt="title" id="title">
 
 <aside>
 <img src="../img/kay.jpg" alt="self" id="self">
 
 
-<h1>FEATURED ARTIST IN RESIDENCE</h1>
+<h1>ABOUT KAYLEIGH FICHTEN</h1>
 <p>Our Winter artist-in-residence is Kayleigh Fichten, from Minneapolis Minnesota. Examining the idea of physical utopias and imagined places, her fictional spaces compel reflection about our experience of nature and the synthetic world. Using fabricated tools to achieve various abstract marks and textures, she uses dynamic layering of color, metaphor, and material in her pieces. Her conceptual process relies on questioning how place and reality can or cannot be represented in contemporary art. The outcome of her work results as a stagnant experience of compulsive gesture, color and rhythmic activity within space.</p>
 </aside>
 
