--- a/store/index.html
+++ b/store/index.html
@@ -46,10 +46,11 @@
 <img src="../img/title_store.png" alt="title" id="title">
 
 
-
+<div class="grid">
+<div class="grid__col grid__col--1-of-3 grid__col--centered">
 <img src="../img/store/store_untitled1.jpeg" alt="store1" id="store1">
 <p>Untitled #1</p>
-<p>$135.00</p>
+<p>$135.00</p></div>
 
 <img src="../img/store/store_untitled2.jpeg" alt="store2" id="store2">
 <p>Untitled #2</p>
@@ -84,18 +85,14 @@
 <p>Phase #8</p>
 <p>$75.00</p>
 
-<img src="../img/store/store_phase9.jpwg" alt="store10" id="store10">
+<img src="../img/store/store_phase9.jpeg" alt="store10" id="store10">
 <p>Phase #9</p>
 <p>$75.00</p>
 
 <img src="../img/store/store_phase12.jpeg" alt="store11" id="store11">
 <p>Phase #12</p>
 <p>$75.00</p>
-
-
-
-
-
+</div>
 
 
 <footer>
