Attempt at adding in TOAST
Added Toast files in store folder and linked via Sass/index file as
needed. No changes seen when index file is viewed, awaiting
feedback/fixes.

--- a/store/index.html
+++ b/store/index.html
@@ -4,7 +4,7 @@
 	<title>Utopic Gallery</title>
 	<meta charset=utf-8">
 	<link type="text/css" rel="stylesheet" href="style.css">
-	<link rel="stylesheet" href="css/toast/grid.css">
+	<link rel="stylesheet" href="css/Toast/grid.css">
 	</style>
 	</head>
 
@@ -92,6 +92,7 @@
 <img src="../img/store/store_phase12.jpeg" alt="store11" id="store11">
 <p>Phase #12</p>
 <p>$75.00</p>
+</div>
 </div>
 
 
