Another attempt to fix Toast
Added more div tags to store file’s index.html file. Sadly, no changes
seen in the actual appearance of the store page. Something’s still not
equating with Toast files and the index file.

--- a/store/index.html
+++ b/store/index.html
@@ -4,7 +4,7 @@
 	<title>Utopic Gallery</title>
 	<meta charset=utf-8">
 	<link type="text/css" rel="stylesheet" href="style.css">
-	<link rel="stylesheet" href="css/Toast/grid.css">
+	<link type="text/css" rel="stylesheet" href="css/Toast/grid.css">
 	</style>
 	</head>
 
@@ -52,43 +52,60 @@
 <p>Untitled #1</p>
 <p>$135.00</p></div>
 
+<div class="grid">
 <img src="../img/store/store_untitled2.jpeg" alt="store2" id="store2">
 <p>Untitled #2</p>
-<p>$115.00</p>
+<p>$115.00</p></div>
 
+<div class="grid">
 <img src="../img/store/store_untitled3.jpeg" alt="store3" id="store3">
 <p>Untitled #3</p>
 <p>$115.00</p>
+</div>
 
+<div class="grid">
 <img src="../img/store/store_shapeshifter3.jpeg" alt="store4" id="store4">
 <p>Shape Shifter #3</p>
 <p>$135.00</p>
+<div>
 
+<div class="grid">
 <img src="../img/store/store_shapeshifter4.jpeg" alt="store5" id="store5">
 <p>Shape Shifter #4</p>
 <p>$150.00</p>
+</div>
 
+<div class="grid">
 <img src="../img/store/store_phase3.jpeg" alt="store6" id="store6">
 <p>Phase #3</p>
 <p>$75.00</p>
+</div>
 
+<div class="grid">
 <img src="../img/store/store_phase5.jpeg" alt="store7" id="store7">
 <p>Phase #5</p>
 <p>$75.00</p>
+</div>
 
+<div class="grid">
 <img src="../img/store/store_phase6.jpeg" alt="store8" id="store8">
 <p>Phase #6</p>
 <p>$75.00</p>
+</div>
 
-
+<div class="grid">
 <img src="../img/store/store_phase8.jpeg" alt="store9" id="store9">
 <p>Phase #8</p>
 <p>$75.00</p>
+</div>
 
+<div class="grid">
 <img src="../img/store/store_phase9.jpeg" alt="store10" id="store10">
 <p>Phase #9</p>
 <p>$75.00</p>
+</div>
 
+<div class="grid">
 <img src="../img/store/store_phase12.jpeg" alt="store11" id="store11">
 <p>Phase #12</p>
 <p>$75.00</p>
